[gd_scene load_steps=7 format=2]

[ext_resource path="res://Escenas/Interfaz.gd" type="Script" id=1]
[ext_resource path="res://Sprites/NESCyrillic.ttf" type="DynamicFontData" id=2]

[sub_resource type="DynamicFont" id=3]
size = 42
font_data = ExtResource( 2 )

[sub_resource type="DynamicFontData" id=1]
font_path = "res://Sprites/NESCyrillic.ttf"

[sub_resource type="DynamicFont" id=2]
size = 64
font_data = SubResource( 1 )

[sub_resource type="DynamicFont" id=4]
size = 32
font_data = ExtResource( 2 )

[node name="Interfaz" type="CanvasLayer"]
script = ExtResource( 1 )
__meta__ = {
"_edit_horizontal_guides_": [  ]
}

[node name="Score" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -331.0
margin_top = -29.0
margin_right = -184.0
margin_bottom = 81.0
custom_fonts/font = SubResource( 3 )
text = "Score:"
align = 1
valign = 1

[node name="ScoreLable" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -245.0
margin_top = -28.0
margin_right = -98.0
margin_bottom = 82.0
custom_fonts/font = SubResource( 3 )
text = "0"
align = 1
valign = 1

[node name="Mensaje" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -231.0
margin_top = -245.0
margin_right = 225.0
margin_bottom = 14.0
custom_fonts/font = SubResource( 2 )
text = "Asteroids
"
align = 1
valign = 1

[node name="BotonPlay" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -76.5
margin_top = 90.0
margin_right = 76.5
margin_bottom = 166.0
custom_fonts/font = SubResource( 4 )
text = "Play"

[node name="MensajeTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[connection signal="pressed" from="BotonPlay" to="." method="_on_BotonPlay_pressed"]
[connection signal="timeout" from="MensajeTimer" to="." method="_on_MensajeTimer_timeout"]
